# esp-amp

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md
.gitlab/: README.md  build.yml  extra.yml  template.yml  test.yml  test_auto.yml  test_manual.yml  test_template.yml  test_trigger.yml  test_with_retries.sh
components/esp_amp/: CMakeLists.txt  Kconfig  project_include.cmake
components/esp_amp/cmake/: subcore_project.cmake
components/esp_amp/cmake/esp32c5/: toolchain-esp-lp-rv32.cmake  toolchain-lp-rv32.cmake
components/esp_amp/cmake/esp32p4/: toolchain-esp-rv32.cmake  toolchain-rv32.cmake
components/esp_amp/idf_stub/esp_app_format/: CMakeLists.txt  Kconfig.projbuild  esp_app_desc.c
components/esp_amp/idf_stub/esp_app_format/include/: esp_app_desc.h
components/esp_amp/idf_stub/esp_rom/: CMakeLists.txt
components/esp_amp/idf_stub/esp_system/: CMakeLists.txt  syscalls.c
components/esp_amp/idf_stub/esp_system/port/arch/riscv/: panic_handler.c
components/esp_amp/idf_stub/esp_system/port/soc/esp32p4/: port.c  portasm.S  start.S  startup.c
components/esp_amp/idf_stub/log/: Kconfig  esp_log.h
components/esp_amp/idf_stub/partition_table/: CMakeLists.txt  project_include.cmake
components/esp_amp/idf_stub/ulp/: CMakeLists.txt  Kconfig  README.md  start.S  vector.S
components/esp_amp/include/: esp_amp.h  esp_amp_event.h  esp_amp_queue.h  esp_amp_rpc.h  esp_amp_rpmsg.h  esp_amp_sw_intr.h  esp_amp_sys_info.h
components/esp_amp/ld/esp32c5/: memory.ld
components/esp_amp/ld/esp32c6/: memory.ld
components/esp_amp/ld/esp32p4/: memory.ld
components/esp_amp/port/arch/riscv/: esp_amp_arch.c
components/esp_amp/port/env/baremetal/: esp_amp_env.c
components/esp_amp/port/env/freertos/: esp_amp_env.c
components/esp_amp/port/include/: esp_amp_arch.h  esp_amp_env.h  esp_amp_platform.h
components/esp_amp/port/platform/hp_core/: esp_amp_platform.c
components/esp_amp/port/platform/lp_core/: esp_amp_platform.c
components/esp_amp/port/platform/sw_intr/intmtx/: esp_amp_platform_sw_intr.c
components/esp_amp/port/platform/sw_intr/pmu/: esp_amp_platform_sw_intr.c
components/esp_amp/priv_include/: esp_amp_log.h  esp_amp_mem_priv.h  esp_amp_service.h  esp_amp_sw_intr_priv.h  esp_amp_utils_priv.h
components/esp_amp/scripts/: check_symbols.py
components/esp_amp/src/: esp_amp.c  esp_amp_queue.c  esp_amp_rpmsg.c  esp_amp_sw_intr.c  esp_amp_sys_info.c  esp_amp_utils.c
components/esp_amp/src/event/baremetal/: esp_amp_event.c
components/esp_amp/src/event/freertos/: esp_amp_event.c
components/esp_amp/src/rpc/: esp_amp_rpc_client.c  esp_amp_rpc_server.c
components/esp_amp/system/: esp_amp_cpu.c  esp_amp_loader.c  esp_amp_panic.c  esp_amp_print.c  esp_amp_service.c  esp_amp_system.c
components/esp_amp/system/include/: esp_amp_system.h
components/esp_amp/system/priv_include/: esp_amp_system_priv.h
docs/: build_system.md  event.md  memory_layout.md  peripheral.md  port.md  queue.md  rpc.md  rpmsg.md  shared_memory.md  software_interrupt.md  system.md
examples/build_system/separate_build/: README.md
examples/build_system/separate_build/common/: event.h
examples/build_system/separate_build/maincore_project/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6
examples/build_system/separate_build/subcore_project/: CMakeLists.txt  sdkconfig.defaults
examples/build_system/unified_build/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/build_system/unified_build/common/: sys_info.h
examples/build_system/unified_build/maincore/: CMakeLists.txt  Kconfig
examples/build_system/unified_build/maincore/main/: app_main.c
examples/event/: CMakeLists.txt  README.md
examples/event/common/: event.h  sys_info.h
examples/event/maincore/: CMakeLists.txt
examples/event/maincore/main/: app_main.c
examples/event/subcore/: CMakeLists.txt  subcore_config.cmake
examples/rpc/maincore_client_subcore_server/: CMakeLists.txt  README.md
examples/rpc/subcore_client_maincore_server/: CMakeLists.txt  README.md  sdkconfig.defaults.esp32c5
examples/rpmsg_send_recv/: CMakeLists.txt  README.md  sdkconfig.defaults.esp32c6
examples/rpmsg_send_recv/maincore/: CMakeLists.txt  Kconfig
examples/rpmsg_send_recv/subcore/: subcore_config.cmake
examples/software_interrupt/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c5
examples/software_interrupt/subcore/: subcore_config.cmake
examples/subcore_use_hp_ram/: CMakeLists.txt  README.md
examples/subcore_use_hp_ram/subcore/: subcore_config.cmake
examples/virtqueue/: CMakeLists.txt  README.md
examples/virtqueue/common/: sys_info.h
examples/virtqueue/subcore/: subcore_config.cmake
test_apps/esp_amp_basic_tests/: CMakeLists.txt  README.md  pyproject.toml  pytest.ini  pytest_esp_amp_basic_tests.py  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32p4
test_apps/esp_amp_basic_tests/maincore/: CMakeLists.txt  test_app_main.c  test_ept_main.c  test_event_main.c  test_libc_main.c  test_load_subcore_main.c  test_rpc_main.c  test_rpmsg_main.c  test_shared.h  test_sw_intr_main.c
test_apps/esp_amp_basic_tests/subcore/test_event/: CMakeLists.txt  subcore_config.cmake
test_apps/esp_amp_basic_tests/subcore/test_event/main/: main.c
test_apps/esp_amp_basic_tests/subcore/test_libc/: CMakeLists.txt  subcore_config.cmake
test_apps/esp_amp_basic_tests/subcore/test_libc/main/: CMakeLists.txt  main.cpp
test_apps/esp_amp_basic_tests/subcore/test_load/: CMakeLists.txt  subcore_config.cmake
test_apps/esp_amp_basic_tests/subcore/test_load/main/: main.c
test_apps/esp_amp_basic_tests/subcore/test_rpc/: CMakeLists.txt  subcore_config.cmake
test_apps/esp_amp_basic_tests/subcore/test_rpc/main/: CMakeLists.txt  main.c
test_apps/esp_amp_basic_tests/subcore/test_rpmsg/: CMakeLists.txt  subcore_config.cmake
test_apps/esp_amp_basic_tests/subcore/test_rpmsg/main/: main.c
test_apps/esp_amp_basic_tests/subcore/test_sw_intr/: CMakeLists.txt  subcore_config.cmake
test_apps/esp_amp_basic_tests/subcore/test_sw_intr/main/: main.c
(+40 files in other folders)
